# jackal

./: README.md
jackal_control/: CHANGELOG.rst
jackal_description/: CHANGELOG.rst
jackal_msgs/: CHANGELOG.rst
jackal_navigation/: CHANGELOG.rst
jackal_tutorials/: CHANGELOG.rst
jackal_viz/rviz/: gmapping.rviz
nav_stop_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml
nav_stop_rviz_plugin/config/: gui.rviz
nav_stop_rviz_plugin/include/nav_stop_rviz_plugin/: nav_stop_rviz_panel.hpp
nav_stop_rviz_plugin/launch/: rviz.launch
nav_stop_rviz_plugin/src/: nav_stop_rviz_panel.cpp
startup_config/: README.md  accessories.launch  setup.bash
