<?xml version="1.0"?>
<package format="2">
  <name>nav_stop_rviz_plugin</name>
  <version>0.0.1</version>
  <description>Simple RViz plugin</description>

  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>class_loader</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rviz</depend>
  <depend>simple_node</depend>

  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>
